--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -11,6 +11,8 @@ body,
 #app {
   width: 100%;
   height: 100%;
+  font-size: 14px;
+  color: #333;
 }
 
 ul,
@@ -30,4 +32,10 @@ ol {
 
 .clearfix {
   zoom: 1;
+}
+
+.el-button:focus {
+  background: #fff;
+  border-color: #cbcbcd;
+  color: #505255;
 }
