chore: 🤖 更改组件添加方式,渲染方式,重构部分组件

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -35,3 +35,14 @@ ol {
 h3 {
   margin-bottom: 15px;
 }
+h4 {
+  margin-bottom: 10px;
+}
+
+.el-tabs {
+  display: flex;
+  flex-direction: column;
+  .el-tab-pane {
+    height: 100%;
+  }
+}
