--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,5 @@
 @import './element.scss';
+@import './nutui.scss';
 * {
   box-sizing: border-box;
   margin: 0;
@@ -40,10 +41,7 @@ h4 {
   margin-bottom: 10px;
 }
 
-.el-tabs {
-  display: flex;
-  flex-direction: column;
-  .el-tab-pane {
-    height: 100%;
-  }
+.vc-color-wrap {
+  margin-left: 10px;
+  box-shadow: 0px 0px 5px 2px #00000014 !important;
 }
